--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
     <div class="menu">
         <nav class="nav-menu">
            <ul class="nav-menu-itens">
-                <li class="nav-menu-item"><a href="#">Página de Contato</a></li>
-                <li class="nav-menu-item"><a href="#">Página dos Autores do Projeto</a></li>
-                <li class="nav-menu-item"><a href="#"></a></li>
-                <li class="nav-menu-item"><a href="#"></a></li>  
+                <li class="nav-menu-item"><a href="#">HOME</a></li>
+                <li class="nav-menu-item"><a href="#">MAPA</a></li>
+                <li class="nav-menu-item"><a href="#">FALE CONOSCO</a></li>
+                <li class="nav-menu-item"><a href="#">SOBRE</a></li>  
            </ul>
         </nav>
     </div>
-
     <!-- #Onde vai ser a parte principal do projeto-->
     <div id="meio">
         <div class="meio-conteudo">
