Página de contato feita
Página de contato feita

--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
            <ul class="nav-menu-itens">
                 <li class="nav-menu-item"><a href="#">HOME</a></li>
                 <li class="nav-menu-item"><a href="#">MAPA</a></li>
-                <li class="nav-menu-item"><a href="#">FALE CONOSCO</a></li>
+                <li class="nav-menu-item"><a href="/pages/FormularioProj1.html">FALE CONOSCO</a></li>
                 <li class="nav-menu-item"><a href="#">SOBRE</a></li>  
            </ul>
         </nav>
     </div>
+
     <!-- #Onde vai ser a parte principal do projeto-->
     <div id="meio">
         <div class="meio-conteudo">
@@ -32,7 +33,7 @@
                 <div id="país">
                     <img src="./img/brazil.png" alt="Brasil" id="brasil-bandeira"> 
                 </div>
-                <p> Desenvolvido por Aline e Alessandro - &copy;2020 Copyright</p>
+                <p> Desenvolvido por Aline e Alessandro - &copy; 2020 Copyright</p>
             </div>
         </div>
     </footer>
