Tirando o / do href do link fale conosco

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <div class="menu">
         <nav class="nav-menu">
            <ul class="nav-menu-itens">
-                <li class="nav-menu-item"><a href="#">HOME</a></li>
+                <li class="nav-menu-item"><a href="index.html">HOME</a></li>
                 <li class="nav-menu-item"><a href="#">MAPA</a></li>
-                <li class="nav-menu-item"><a href="/pages/FormularioProj1.html">FALE CONOSCO</a></li>
+                <li class="nav-menu-item"><a href="pages/FormularioProj1.html">FALE CONOSCO</a></li>
                 <li class="nav-menu-item"><a href="#">SOBRE</a></li>  
            </ul>
         </nav>
