Adicionando páginas e funcções novas
Foi adicionado novas páginas e um mapa com dois pontos de campinas

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <nav class="nav-menu">
            <ul class="nav-menu-itens">
                 <li class="nav-menu-item"><a href="index.html">HOME</a></li>
-                <li class="nav-menu-item"><a href="#">MAPA</a></li>
+                <li class="nav-menu-item"><a href="/pages/mapa.html">MAPA</a></li>
                 <li class="nav-menu-item"><a href="pages/FormularioProj1.html">FALE CONOSCO</a></li>
-                <li class="nav-menu-item"><a href="#">SOBRE</a></li>  
+                <li class="nav-menu-item"><a href="/pages/sobre.html">SOBRE</a></li>  
            </ul>
         </nav>
     </div>
@@ -33,7 +33,7 @@
                 <div id="país">
                     <img src="./img/brazil.png" alt="Brasil" id="brasil-bandeira"> 
                 </div>
-                <p> Desenvolvido por Aline e Alessandro - &copy; 2020 Copyright</p>
+                <p> Desenvolvido por Alessandro - &copy; 2020 Copyright</p>
             </div>
         </div>
     </footer>
