Mudança da estrutura das páginas
Mudei o caminho das páginas

--- a/pages/mapa.html
+++ b/pages/mapa.html
@@ -19,9 +19,9 @@
         <nav class="nav-menu">
            <ul class="nav-menu-itens">
                 <li class="nav-menu-item"><a href="../index.html">HOME</a></li>
-                <li class="nav-menu-item"><a href="/pages/mapa.html">MAPA</a></li>
-                <li class="nav-menu-item"><a href="/pages/FormularioProj1.html">FALE CONOSCO</a></li>
-                <li class="nav-menu-item"><a href="/pages/sobre.html">SOBRE</a></li>  
+                <li class="nav-menu-item"><a href="mapa.html">MAPA</a></li>
+                <li class="nav-menu-item"><a href="FormularioProj1.html">FALE CONOSCO</a></li>
+                <li class="nav-menu-item"><a href="sobre.html">SOBRE</a></li>  
            </ul>
         </nav>
     </div>
