Imagens adicionas/Pontos de localização inseridos

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <script src="./js/index.js"></script>
     <link rel="stylesheet" href="./css/index.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,7 +24,18 @@
     <!-- #Onde vai ser a parte principal do projeto-->
     <div id="meio">
         <div class="meio-conteudo">
-            <p>AQUI vai ficar o conteudo</p>
+            <div class="image-text">
+                <img id="image-1" src="" alt="imagem">
+                <p id="texto=1" class="text"></p>
+            </div>
+            <div class="image-text">
+                <img id="image-2" src="" alt="imagem">
+                <p id="texto=2" class="text"></p>
+            </div>
+            <div class="image-text">
+                <img id="image-3" src="" alt="imagem">
+                <p id="texto=3" class="text"></p>
+            </div>
         </div>
     </div>
     <!-- #rodapé da página -->
