--- a/pages/mapa.html
+++ b/pages/mapa.html
@@ -28,48 +28,7 @@
 
     <div class="conteudo">
         <div id="mapid"></div>
-        <script>
-            var mymap = L.map('mapid').setView([-22.90083722761145, -47.05751054635783], 18);
-            L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}', {
-            attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
-            maxZoom: 18,
-            id: 'mapbox/satellite-streets-v11',
-            tileSize: 512,
-            zoomOffset: -1,
-            accessToken: 'pk.eyJ1IjoiZGFuZ3V5YSIsImEiOiJjazhwMTNtMWcwenMyM2txenp6dTY0ZDhjIn0.N2s22ojbLoi7Ma78mMZ8Mw'
-        }).addTo(mymap);
-
-        //var marker = L.marker([-22.90083722761145, -47.05751054635783]).addTo(mymap).bindPopup("Prefeitura de Campinas").openPopup();
-        //var marker2 = L.marker([-22.90091204356765, -47.05722532278998]).addTo(mymap).bindPopup("SEMURB - Secretaria Municipal de Urbanismo de Campinas").openPopup();
-
-        var data = [{
-            "nome": "Prefeitura de campinas",
-            "latitud": -22.90083722761145,
-            "longitud": -47.05751054635783
-        },{
-            "nome": "SEMURB - Secretaria Municipal de Urbanismo de Campinas",
-            "latitud": -22.90091204356765,
-            "longitud": -47.05722532278998
-        }]
-
-        var jsonFeatures = [];
-
-        data.forEach(function(point){
-            var no = point.nome
-            var lat = point.latitud;
-            var lon = point.longitud;
-            var feature = {type: 'Feature',
-                properties: {
-
-                },
-                geometry: {
-                    type: 'Point',
-                    coordinates: [lon,lat]
-                }
-            };
-            L.geoJson(feature).bindPopup(no).openPopup().addTo(mymap);
-        });
-        </script>
+        <script src="../js/mapa.js"></script>
     </div>
 
     <footer id="footer">
